Init JFX successfully